src/vs/workbench/contrib/terminal/browser/media/terminal.css
/* ... */
.monaco-workbench .pane-body.integrated-terminal .tabs-container.has-text .tabs-list .terminal-tabs-entry .monaco-icon-label::after {
	margin-right: 0;
}

.monaco-workbench .pane-body.integrated-terminal .tabs-container:not(.has-text) .terminal-tabs-entry .codicon {
	/* Force inherit when no text is showing as the regular icon gets replaced by the status icon */
	color: inherit;
}

.monaco-workbench .pane-body.integrated-terminal .tabs-container:not(.has-text) .monaco-icon-description-container {
	/* The description element doesn't go away once created sometimes so force hide */
	display: none;
}

.monaco-workbench .pane-body.integrated-terminal .tabs-list .codicon {
	vertical-align: text-bottom;
}

.monaco-workbench .pane-body.integrated-terminal .tabs-list .actions {
	display: none;
}

.monaco-workbench .pane-body.integrated-terminal .tabs-list .editable-tab .monaco-icon-name-container {
	display: none;
}

.monaco-workbench .pane-body.integrated-terminal .tabs-list .editable-tab .monaco-inputbox {
	min-width: 0;
	width: 100%;
	box-sizing: border-box;
	height: 22px;
}

.monaco-workbench .pane-body.integrated-terminal .tabs-list .editable-tab .monaco-inputbox > .ibwrapper > .input {
	padding: 0 6px;
	height: 100%;
	line-height: 22px;
	box-sizing: border-box;
}

.monaco-workbench .pane-body.integrated-terminal .tabs-list .actions .action-label {
	padding: 2px;
}

.monaco-workbench .pane-body.integrated-terminal .tabs-list .monaco-list-row:hover .actions,
.monaco-workbench .pane-body.integrated-terminal .tabs-list:focus-within .monaco-list-row.selected .actions,
.monaco-workbench .pane-body.integrated-terminal .tabs-list:focus-within .monaco-list-row.focused .actions {
	display: block;
}

.monaco-action-bar .action-item:has(> .single-terminal-tab) {
	flex: 1;
	min-width: 0;
	overflow: hidden;
}

.monaco-action-bar .action-item .single-terminal-tab {
	display: flex !important;
	align-items: center;
	overflow: hidden;
	min-width: 0;
	white-space: nowrap;
}

.monaco-action-bar .action-item .single-terminal-tab .codicon:first-child {
	margin-right: 4px;
}

.monaco-action-bar .action-item .single-terminal-tab .codicon:nth-child(2) {
	margin-left: 4px;
	color: inherit;
}

.monaco-workbench .pane-body.integrated-terminal .tabs-container.has-text .tabs-list .terminal-tabs-entry .uri-icon {
	background-repeat: no-repeat;
	background-size: contain;
	margin-right: 4px;
	height: 100%;
}

.monaco-workbench .terminal-uri-icon .monaco-highlighted-label .codicon,
.monaco-action-bar .terminal-uri-icon.single-terminal-tab.action-label .codicon {
	background-size: 16px;
}
.monaco-workbench .terminal-uri-icon .monaco-highlighted-label .codicon::before,
.monaco-action-bar .terminal-uri-icon.single-terminal-tab.action-label:not(.alt-command) .codicon::before {
	content: '';
	display: inline-block;
	width: 16px;
	height: 16px;
}

.monaco-workbench .pane-body.integrated-terminal .terminal-drop-overlay {
	display: block;
	position: absolute;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
	pointer-events: none;
	opacity: 0; /* hidden initially */
	z-index: 34;
}
.monaco-workbench.monaco-enable-motion .pane-body.integrated-terminal .terminal-drop-overlay {
	transition: left 70ms ease-out, right 70ms ease-out, top 70ms ease-out, bottom 70ms ease-out, opacity 150ms ease-out;
}
.monaco-workbench .pane-body.integrated-terminal .terminal-group > .monaco-split-view2.horizontal .terminal-drop-overlay.drop-before {
	right: 50%;
}
.monaco-workbench .pane-body.integrated-terminal .terminal-group > .monaco-split-view2.horizontal .terminal-drop-overlay.drop-after {
	left: 50%
}
.monaco-workbench .pane-body.integrated-terminal .terminal-group > .monaco-split-view2.vertical .terminal-drop-overlay.drop-before {
	bottom: 50%;
}
.monaco-workbench .pane-body.integrated-terminal .terminal-group > .monaco-split-view2.vertical .terminal-drop-overlay.drop-after {
	top: 50%;
}

.monaco-workbench .terminal .terminal-command-decoration:not(.default):hover {
	cursor: pointer;
}
.monaco-workbench .terminal .terminal-command-decoration:not(.default):hover::before {
	border-radius: 5px;
	background-color: var(--vscode-toolbar-hoverBackground);
}
.monaco-workbench .terminal .terminal-command-decoration {
	color: var(--vscode-terminalCommandDecoration-successBackground);
}
.monaco-workbench .terminal .terminal-command-decoration.error {
	color: var(--vscode-terminalCommandDecoration-errorBackground);
}
.monaco-workbench .terminal .terminal-command-decoration.default {
	pointer-events: none;
	color: var(--vscode-terminalCommandDecoration-defaultBackground);
}

.terminal-scroll-highlight {
	left: 0;
	right: 0;
	border-left: 5px solid #ffffff;
	border-left-width: 5px !important;
	pointer-events: none;
}

.terminal-range-highlight {
	outline: 1px solid var(--vscode-focusBorder);
	pointer-events: none;
}

.terminal-command-guide {
	left: 0;
	border: 1.5px solid #ffffff;
	width: 0px !important;
	border-color: var(--vscode-terminalCommandGuide-foreground);
	box-sizing: border-box;
	transform: translateX(3px);
	pointer-events: none;
	margin-left: -20px;
}
.terminal-command-guide.top {
	border-top-left-radius: 1px;
	border-top-right-radius: 1px;
}
.terminal-command-guide.bottom {
	border-bottom-left-radius: 1px;
	border-bottom-right-radius: 1px;
}

.terminal-scroll-highlight-outline {
	border-left: 1px solid #ffffff;
	border-right: 1px solid #ffffff;
	pointer-events: none;
}
.terminal-scroll-highlight-outline.top {
	border-top: 1px solid #ffffff;
}
.terminal-scroll-highlight-outline.bottom {
	border-bottom: 1px solid #ffffff;
}

.terminal-scroll-highlight,
.terminal-scroll-highlight.terminal-scroll-highlight-outline {
	border-color: var(--vscode-focusBorder);
}
/* ... */

